--- a/frontend/src/components/LiveConfigPage/components/SelectedMessageForm/SelectedMessageForm.css
+++ b/frontend/src/components/LiveConfigPage/components/SelectedMessageForm/SelectedMessageForm.css
@@ -6,7 +6,8 @@
 
 .MessageTextBox {
   display: block;
-  color: #232127;
+  color: var(--text-color);
+  background-color: var(--background-color);
 
   max-width: 95%;
   
